Fix spacing in the footer.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,7 @@ $site-footer: 65px;
   ul {
     text-align: center;
     margin: auto;
+    -webkit-padding-start: 0;
   }
 
   li {
